@@ -1,0 +1,116 @@
+<title>LilyPond 2.8 now available</title>
+
+<h1>LilyPond version 2.8 available - prettier music than ever</h1>
+
+Utrecht the Netherlands, March 21, 2006.
+<p>
+After 9 months of backbreaking hacking, the LilyPond Development Team
+is proud to announce LilyPond 2.8.0, software for better looking music
+notation.
+<p>
+
+The inspiration for LilyPond came when two befriended musicians got
+annoyed with the bland and boring look of computer print-out. Every
+musician prefers reading beautiful music, so couldn't we programmers
+solve that printing problem?
+<p>
+
+LilyPond just does that: it prints music in the best traditions of
+classical engraving available with minimum fuss.  Don't waste time on
+tuning spacing, moving around symbols, or shaping slurs.  Impress
+friends and colleagues with sharp sheet music! 
+
+
+<h2>New stuff</h2>
+
+Version 2.8 replaces the latest "stable" release 2.6.  The newest
+version adds three major typographical improvements
+
+<ul>
+<li>Page Layout Options
+<p>
+ 
+  Creating good page layout has never been easier: tune vertical
+  spacing per system, set the total number of systems, visualize page
+  parameters.
+
+<li>Exact proportional spacing
+<p>
+
+  Algorithmic notation buffs will love this option, where mixed exotic
+  rhythms and nested tuplets still produce mathematically consistent
+  spacing.
+
+<li>Vastly improved formatting for ties
+<p>
+
+  Get the best tied chord formatting anywhere, and if that doesn't
+  satisfy you, just override each offending tie configuration.
+</ul>
+
+That's not all, check out
+<pre>
+   <a
+   href="http://lilypond.org/doc/v2.8/Documentation/topdocs/NEWS.html">
+   http://lilypond.org/doc/v2.8/Documentation/topdocs/NEWS.html
+   </a>
+</pre>
+for all changes.
+
+
+<h2>Style your own pond</h2>
+
+Most of the new features have been implemented at user's requests.
+By ordering custom code with <a href="http://lilypond-design.com">LilyPond
+Software Design</a>, you too can get your favorite gripe fixed.
+<p>
+Download your ready-to-run binary from
+<pre>
+<a href="http://lilypond.org">lilypond.org</a>
+</pre>
+We have them for MacOS X (ppc), Windows, Linux and FreeBSD.
+<p>
+
+Happy music printing!
+
+<h3>Development team</h3>
+
+
+Han-Wen Nienhuys  - Core development<br>
+
+Jan Nieuwenhuizen - Core development<br>
+Erik Sandberg     - Bug Meister<br>
+Pedro Kroger      - Build Meister<br>
+Graham Percival   - Documentation Editor<br>
+
+<h3>Contributors</h3>
+
+Erlend Aasland, Heikki Junes, Joe Neeman, Johannes Schindelin, Nicolas
+Sceaux, Werner Lemberg, Yoshinobu Ishizaki.
+
+<h3>Sponsors</h3>
+
+Aaron Mehl, Basil Crow, Bertalan Fodor, Christian Ebert, Henrik Frisk,
+Jay Hamilton, Jamie Bullock, John Mandereau, D. Josiah Boothby, Kieren
+MacMillan, Kris Shaffer, Mark van den Borre, Mike Rolish,
+Muziekacademie Lede, Nancho Alvarez, Nicolas Sceaux, Sean Reed, Steve
+Doonan, Sven Axelsson, Trent Johnston, Trevor Bača, Yoshinobu
+Ishizaki, and Vicente Solsona Dellá.
+
+<h3>Bug hunters and suggestions</h3>
+
+Alan Stern, Andrea Valle, Bertalan Fodor, Bob Broadus, Bruce
+Fairchild, Cameron Horsburgh, Chris Sawer, Christian Ebert, Christian
+Hitz, Darius Blasband, David Bobroff, David Raleigh Arnold, Donald
+Axel, Don Blaheta, Dunstan Vavasour, Edward Neeman, Eduardo Vieira,
+Ernesto Gancedo, François Vion, Frédéric Bron, Geoff Horton, Gianluca
+D., Hans Forbrich, Hoang Nguyen, Joe Neeman, Jordi Nadal, Jukka
+Akkanen, Kieren Richard MacMillan, Lambros Lambrou, Laura Conrad,
+Libero Mureddu, Marcus Macauley, Mark Steinheuser, Matevž Jekovec,
+Michael Kiermaier, Michael Welsh Duggan, Milan Zamazal, Nicolas
+Mayencourt, Orm Finnendahl, Patrick K Welton, Paul Scott, Ralph
+Little, Richard Schoeller, Robert Vlatasy, Roman Kurakin, Russell
+Lang, Scott Russell, Sean Reed, Seng Liang, Steve Doonan, Steven
+Weber, Sven Axelsson, Thomas Scharkowski, Thomas Bushnell BSG, Toine
+Schreurs, Trent Johnston, Trevor Bača, Vicente Solsona Dellá, Vincenzo
+Colonnella, Will Oram, and Wolfgang Hoffmann.
