@@ -1,3 +1,7 @@
+2006-03-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/announce-v2.8.html: new file.
+
 2006-03-08  John Mandereau  <john.mandereau@free.fr>
 
 	* fr/switch/new-notation.html: revise translation
